[package]
name = "sysmon"
version = "0.1.8"
authors = ["Insanitybit <insanitybit@gmail.com>"]
description = "Type definitions and (de)serialization support for Sysmon events"
license = "MIT OR Apache-2.0"
keywords = ["sysinternals", "sysmon"]

repository = "https://github.com/insanitybit/sysmon"
readme = "README.md"


[dependencies]
unhtml = "0.1.1"
unhtml_derive = "0.2.1"
failure = "0.1.3"
derive_is_enum_variant = "0.1.1"