[package]
name = "sysmon"
version = "0.2.1"
authors = ["Insanitybit <insanitybit@gmail.com>"]
description = "Type definitions and (de)serialization support for Sysmon events"
license = "MIT OR Apache-2.0"
keywords = ["sysinternals", "sysmon"]
edition = "2018"
repository = "https://github.com/insanitybit/sysmon"
readme = "README.md"


[dependencies]


failure = "0.1.3"
serde-xml-rs = "0.3.1"
serde = "1.0.101"
serde_derive = "1.0.101"
derive_is_enum_variant = "0.1.1"
anyhow = "1.0.13"
chrono = "0.4.9"
uuid = { version = "0.7", features = ["serde", "v4"] }